:books: doc: Atualizaçções na documentação swagger
